# async-agentic-sdlc

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  PRACTICUM.md  README.md  main.py  orchestrator.py  pyproject.toml  requirements.txt  tag_history.sh
.ai/memory/: MEMORY.md  agent_provider_model_map.md  config_constant_convention.md  debugging_protocol.md  feedback_context_isolation.md  iteration_release_prompt.md  prompt_language_independence.md  qa_sandbox_hardening.md  repo_module_map.md  run_layout_and_cli.md  skill_routing_frontmatter.md  token_budget_excludes_cache.md  workspace_topology.md
.ai/skills/: adr_generation.md  docs_sync.md  practicum_update.md
.claude/: settings.json
.claude/hooks/: protect-paths.sh
.claude/rules/: agent-code-purity.md  agent-contracts.md  agent-provider-model-map.md  agent-role-registration.md  config-constant-convention.md  debugging-protocol.md  deploy-scaffolding-and-ci-parity.md  engine-language-agnostic.md  feedback-context-isolation.md  finops-app-budget.md  hackathon-docs-are-human-gated.md  pipeline-fsm-loops.md  plane-import-direction.md  prompt-language-independence.md  prompt-suite-conventions.md  qa-sandbox-hardening.md  relative-paths-in-docs.md  repo-module-map.md  run-layout-and-cli.md  run-tests-via-wsl.md  skill-routing-frontmatter.md  subprocess-and-external-call-safety.md  (+2 more)
docker/: dotnet.Dockerfile  go.Dockerfile  node.Dockerfile  python.Dockerfile  semgrep.Dockerfile
docs/: ARCHITECTURE.md  BACKLOG.md  README.md  docker-on-windows.md  setup.md
scripts/: build_sandbox_images.sh
(+254 files in other folders)
