[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "token-burners-factory"
version = "0.25.0"                        # bump in lockstep with the pushed v* release tag
description = "Agentic SDLC pipeline — idea in, working reviewed app on main, deployable"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "instructor==1.15.1",
    "google-genai==2.6.0",
    "pydantic>=2.5",
    "bandit==1.9.4",
    "jsonref",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest==9.0.3"]

[project.scripts]
tbf = "src.nexus.runner:_cli_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "prompts*"]

[tool.setuptools.package-data]
"prompts" = ["**/*.md"]
"prompts.system" = ["*.md"]
"prompts.skills" = ["*.md"]
